kubernetes/laravel-k8s.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: scoreboard-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: scoreboard-app
  template:
    metadata:
      labels:
        app: scoreboard-app
    spec:
      containers:
      - name: scoreboard-app
        image: allenlo83/scoreboard-app:latest
        ports:
        - containerPort: 9000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: scoreboard-nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: scoreboard-nginx
  template:
    metadata:
      labels:
        app: scoreboard-nginx
    spec:
      containers:
      - name: scoreboard-nginx
        image: allenlo83/scoreboard-nginx:latest
        ports:
        - containerPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: scoreboard-reverb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: scoreboard-reverb
  template:
    metadata:
      labels:
        app: scoreboard-reverb
    spec:
      containers:
      - name: scoreboard-reverb
        image: allenlo83/scoreboard-reverb:latest
        ports:
        - containerPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysql
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
      - name: mysql
        image: mysql:8.0
        ports:
        - containerPort: 3306
        volumeMounts:
        - name: mysql-persistent-storage
          mountPath: /var/lib/mysql
      volumes:
      - name: mysql-persistent-storage
        persistentVolumeClaim:
          claimName: mysql-pv-claim
---
apiVersion: v1
kind: Service
metadata:
  name: scoreboard-nginx-service
  annotations:
    service.beta.kubernetes.io/linode-loadbalancer-throttle: "4"
spec:
  type: LoadBalancer
  selector:
    app: scoreboard-nginx
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: scoreboard-app-service
spec:
  selector:
    app: scoreboard-app
  ports:
    - protocol: TCP
      port: 9000
      targetPort: 9000
---
apiVersion: v1
kind: Service
metadata:
  name: scoreboard-reverb-service
  annotations:
    service.beta.kubernetes.io/linode-loadbalancer-throttle: "4"
spec:
  type: LoadBalancer
  selector:
    app: scoreboard-reverb
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: mysql-service
spec:
  selector:
    app: mysql
  ports:
    - protocol: TCP
      port: 3306
      targetPort: 3306
